--- a/views/repertoireInfoPilotes.handlebars
+++ b/views/repertoireInfoPilotes.handlebars
@@ -1,15 +1,5 @@
-
+{{> lettres}}
 <h1> Mettre ici les infos pilotes</h1>
-
-<div class="lettreRepertoire">
-  Cliquez sue une lettre : 
-	{{#each listeLettrePilote}}
-
-    <a class="letrre" href="/detailPilote/{{this.lettre}}"> {{this.lettre}}</a>
-
-  {{/each}}
-</div>
-   
 
 	 {{#each listeInfoPilote}}
     
