--- a/views/repertoirePilotes.handlebars
+++ b/views/repertoirePilotes.handlebars
@@ -1,10 +1,1 @@
-
-<div class="lettreRepertoire">
-  Cliquez sue une lettre : 
-	{{#each listeLettrePilote}}
-
-    <a class="letrre" href="/detailPilote/{{this.lettre}}"> {{this.lettre}}</a>
-
-  {{/each}}
-</div>
-   
+{{> lettres}}
