--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,14 @@
 	<title> {{title}}</title>
 	<meta charset="UTF-8" />
 	<link rel="icon" type="image/x-icon" href="/image/favicon.png" />
-
+	<link href="path/to/lightbox.css" rel="stylesheet" />
 	<link rel="stylesheet" href="/css/structure.css" />
 
 </head>
 
 <body class="monBody">
+<script src="../dist/js/lightbox-plus-jquery.min.js"></script>
+<script src="path/to/lightbox.js"></script>
 <div id="container">
 	<div id="header">
 	<img src="/image/header.jpg" alt="WROOM l'encyclopédie de la F1" />
