--- a/views/repertoireInfoDetailPilotes.handlebars
+++ b/views/repertoireInfoDetailPilotes.handlebars
@@ -1,11 +1,31 @@
-
-
-  Ceci est un test: 
-	{{#each infoDetailPilote}}
-
-  <p>{{this.pilnom}}</p>
-  
-
+{{> lettres}}
+  <p></p>
+	{{#each listeInfoPilote}}
+    <img class="sizeImageInfoPilote" src="/image/pilote/{{this.phoadresse}}" alt="image du pilote" />
+    <p>Nom : {{this.pilnom}} {{this.pilprenom}}</p>
+    <p>Date de naissance : {{formatDate this.pildatenais 'DD MMMM YYYY' }}</p>
+    <p>Nationalité : {{this.paynat}}</p>
+    <p>Poids : {{this.pilpoids}} kg </p>
+    <p>Taille : {{this.piltaille}} cm </p>
+    {{#if this.ecunom}}
+      <p>Ecurie : {{this.ecunom}}</p>
+    {{else}}
+      <p>Ecurie : Pas d'écurie cette année</p>
+    {{/if}}
+    
+    {{#if ../listeSponsors}}
+      <h2>Principaux sponsors :</h2>
+      {{#each ../listeSponsors}}
+          <b>{{this.sponom}} </b><span>({{this.sposectactivite}})</span><br />
+      {{/each}}
+    {{else}}
+      <b>Aucun Sponsor</b><br />
+    {{/if}}
+    <br /><b>Qui suis-je ?</b><p>{{this.piltexte}}</p>
   {{/each}}
+  {{#each listePhotos}}
+<a href="/images/image-1.jpg" data-lightbox="image-1" data-title="My caption">
+<img class="sizeImageInfoPilote" src="/image/pilote/{{this.phoadresse}}" alt=""></a>
+{{/each}}  
 
    
