--- a/views/repertoireInfoDetailPilotes.handlebars
+++ b/views/repertoireInfoDetailPilotes.handlebars
@@ -24,7 +24,7 @@
     <br /><b>Qui suis-je ?</b><p>{{this.piltexte}}</p>
   {{/each}}
   {{#each listePhotos}}
-<a href="/images/image-1.jpg" data-lightbox="image-1" data-title="My caption">
+<a href="/image/pilote/{{this.phoadresse}}" data-lightbox="image-1" data-title="{{this.phocommentaire}}">
 <img class="sizeImageInfoPilote" src="/image/pilote/{{this.phoadresse}}" alt=""></a>
 {{/each}}  
 
