--- a/admin/views/layouts/main.handlebars
+++ b/admin/views/layouts/main.handlebars
@@ -19,8 +19,8 @@
 	<img src="/image/header.jpg" alt="WROOM l'encyclopédie de la F1" />
 	</div>
 	<div id="menu">
-		<a href="/repertoirePilote">PILOTES</a> |
-		<a href="/circuits">LES CIRCUITS 2020</a> |
+		<a href="/pilotes">PILOTES</a> |
+		<a href="/circuits">LES CIRCUITS</a> |
 		<a href="/ecuries">ECURIES</a> |
 		<a href="/resultats">RESULTATS</a> |
 		<a href="/sponsor">SPONSORS</a> |
