Update and Delete circuits

--- a/admin/views/gestionCircuits.handlebars
+++ b/admin/views/gestionCircuits.handlebars
@@ -17,11 +17,11 @@
         <td>{{this.cirlongueur}}</td>
         <td>{{this.cirnbspectateurs}} </td>
         <td>
-            <a href="">
+            <a href="/modifCircuit/{{this.cirnum}}">
                 <img src="/image/act_edit.png" alt="">
                 Modifier
             </a>
-            <a href="">
+            <a href="/supprCircuit/{{this.cirnum}}">
                 <img src="/image/act_delete.png" alt="">
                 Supprimer
             </a>
