End of updating circuits

--- a/admin/views/gestionCircuits.handlebars
+++ b/admin/views/gestionCircuits.handlebars
@@ -17,7 +17,7 @@
         <td>{{this.cirlongueur}}</td>
         <td>{{this.cirnbspectateurs}} </td>
         <td>
-            <a href="/modifCircuit/{{this.cirnum}}">
+            <a href="/modifCircuit/{{this.cirnum}}/{{this.paynum}}">
                 <img src="/image/act_edit.png" alt="">
                 Modifier
             </a>
