--- a/admin/views/modifCircuit.handlebars
+++ b/admin/views/modifCircuit.handlebars
@@ -7,18 +7,16 @@
       <label>Pays</label>
 
       <select name="paynum">
-{{#each ../listePays}}
-
-{{#if ../listeInfoCircuitSelect}}
-  <p>ok</p>
-{{else}}
-
-{{/if}}
-          <option value="{{this.paynum}}">{{this.paynom}}</option>
+{{#each ../listePaysMemeQueCircuitSelect}}
+  {{#if this.estmeme}}
+    <option value="{{this.paynum}}" selected>{{this.paynom}}</option>
+  {{else}}
+    <option value="{{this.paynum}}">{{this.paynom}}</option>
+  {{/if}}
 {{/each}}
       </select><br />
-
-      <label>Image</label><input type="file" name="ciradresseimage" value="{{this.ciradresseimage}}" multiple><br />
+      <input type="hidden" name="ciradresseimageDefault" value="{{this.ciradresseimage}}">
+      <label>Image</label><input type="file" name="ciradresseimageChangee" value="{{this.ciradresseimage}}" multiple><br />
       <label>Nombre de spectateurs</label><input type="text" name="cirnbspectateurs" value="{{this.cirnbspectateurs}}"> personnes<br />
       <label>Description</label><input type="textarea" name="cirtext" value="{{this.cirtext}}"><br />
 
