connexion+blocage des routes

--- a/admin/views/ajoutPilote.handlebars
+++ b/admin/views/ajoutPilote.handlebars
@@ -19,6 +19,6 @@
   <label>Points</label><input type="text" name="pilpoints"> pts<br />
   <label>Poids</label><input type="text" name="pilpoids"> kg<br />
   <label>Taille</label><input type="text" name="piltaille"> cm<br />
-  <label>Description</label><input type="textarea" name="piltexte"><br />
+  <label>Description</label><textarea  name="piltexte"  rows="10" cols="120"></textarea><br />
   <input type="submit" value="ajouter">
 </form>
