--- a/admin/views/gestionPilotes.handlebars
+++ b/admin/views/gestionPilotes.handlebars
@@ -17,12 +17,12 @@
         <td>{{this.pilprenom}}</td>
         <td>{{formatDate this.pildatenais 'DD MMMM YYYY'}} </td>
         <td>
-            <a href="">
-                <img src="/image/act_edit.png" alt="">
+            <a href="/modif/{{this.pilnum}}">
+                <img src="/image/act_edit.png">
                 Modifier
             </a>
-            <a href="">
-                <img src="/image/act_delete.png" alt="">
+            <a href="/supp/{{this.pilnum}}">
+                <img src="/image/act_delete.png">
                 Supprimer
             </a>  
         </td>
