--- a/admin/views/modifierPilote.handlebars
+++ b/admin/views/modifierPilote.handlebars
@@ -6,14 +6,22 @@
   <label>Date de naissance</label><input type="date" name="pildatenais" value="{{formatDate listeInfoModif.0.pildatenais 'YYYY-MM-DD'}}"><br />
   <label>Nationalité</label>
     <select name="paynum">
-      {{#each listeNationalite}}
-      <option value="{{this.paynum}}">{{this.paynom}}</option>
+      {{#each listeNationalitePreSelect}}
+          {{#if this.estmeme}}
+              <option value="{{this.paynum}}" selected>{{this.paynom}}</option>
+          {{else}}
+              <option value="{{this.paynum}}">{{this.paynom}}</option>
+          {{/if}}
        {{/each}}
   </select><br />
   <label>Ecurie</label>
     <select name="ecunum">
-      {{#each listeEcurie}}
-      <option value="{{this.ecunum}}">{{this.ecunom}}</option>
+      {{#each listeEcuriePreSelect}}
+          {{#if this.estmeme}}
+              <option value="{{this.ecunum}}" selected>{{this.ecunom}}</option>
+          {{else}}
+              <option value="{{this.ecunum}}">{{this.ecunom}}</option>
+          {{/if}}
       {{/each}}
   </select><br />
   <label>Points</label>
@@ -27,4 +35,3 @@
   <label>Description</label><textarea  name="piltexte"  rows="10" cols="120">{{listeInfoModif.0.piltexte}}</textarea><br />
   <input type="submit" value="Modifier">
 </form>
-
