--- a/user/views/layouts/main.handlebars
+++ b/user/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
 					© IUT du Limousin DUT Informatique année 2
 					<br />
 					<br />
-                Appllication réalisée par X... Y.... & A... B....
+                Appllication réalisée par Anne-Sophie Laville & Joffrey Annan
                 <br />
 					<img src="/image/nodejs.png" id= "LogoNode" alt="Logo NodeJs" title="Logo Node.JS" />
 			</div>
