--- a/user/views/home.handlebars
+++ b/user/views/home.handlebars
@@ -1,1 +1,11 @@
-<h1>Ecrire ici la page d'acceuil du site</h1>
+<h1>Bienvenue sur Wroom ! </h1>
+<div class="contains">
+    <div class="dernierRes">
+        <p class="upp">Dernier Résultats</p>
+        <b>{{listeHomeResultat.0.gpnom}} du {{formatDate listeHomeResultat.0.date 'DD/MM/YYYY'}}</b><br />
+        <p>Mise à jour le : {{formatDate listeHomeResultat.0.dateMaj 'DD/MM/YYYY'}}</p>
+        <a href="/resultats">Voir les résultats</a>
+    </div>
+</div>
+
+
