--- a/user/views/detailResultat.handlebars
+++ b/user/views/detailResultat.handlebars
@@ -1,22 +1,34 @@
 
-<h1> {{listeTitre.0.gpnom}} du {{formatDate listeTitre.0.gpdate 'DD MMMM YYYY' }}</h1>
-{{> grandprix}}
-<table>
-    <tr>
-        <th>Rang</th>
-        <th>Pilote</th>
-        <th>Temps de la course</th>
-        <th>Nombre de points</th>
-    </tr>
+
+
+<div class="contenu">
     
-        {{#each listeTableau}}
-    <tr>
-        <td>{{this.rang}}</td>
-        <td>{{this.pilprenom}} {{this.pilnom}}</td>
-        <td>{{this.tempscourse}}</td>
-        <td>{{this.Points}}</td>
-    </tr>
-    {{/each}}
-    
-</table>
-<p>{{this.listeTitre.0.gpcommentaire}}</p>
+    {{> grandprix}}
+</div>
+<div class="resultat">
+    <h1> {{listeTitre.0.gpnom}} du {{formatDate listeTitre.0.gpdate 'DD MMMM YYYY' }}</h1><br />
+        <table class="table">
+        <tr>
+            <th>Rang</th>
+            <th>Pilote</th>
+            <th>Temps de la course</th>
+            <th>Nombre de points</th>
+        </tr>
+        
+            {{#each listeTableau}}
+        <tr>
+            <td>{{this.rang}}</td>
+            <td>{{this.pilprenom}} {{this.pilnom}}</td>
+            <td>{{this.tempscourse}}</td>
+            <td>{{this.Points}}</td>
+        </tr>
+        {{/each}}
+        
+    </table>
+    </div>
+
+
+
+
+<p class="justify">{{this.listeTitre.0.gpcommentaire}}</p>
+<br class="myboth">
