--- a/user/views/detaillerCircuit.handlebars
+++ b/user/views/detaillerCircuit.handlebars
@@ -1,15 +1,17 @@
-<div class="vuePatielleDetailCircuit">
+<div class="contenu">
 		{{> listerCircuitVuePartielle}}
 </div>
 <div class="informationsComplestDetailCircuit">
 	{{#each detailCircuit}}
-		<img class="imagesDetailCircuit"src="/image/circuit/{{this.ciradresseimage}}" alt="image du circuit" />
+		<img class="imagesDetailCircuit" src="/image/circuit/{{this.ciradresseimage}}" alt="image du circuit" />
 		<div class="infosCircuit">
 			<p><b>Nom :</b> {{this.cirnom}}</p>
 			<p><b>Longueur :</b> {{this.cirlongueur}} m</p>
 			<p><b>Nombre de spectateurs :</b> {{this.cirnbspectateurs}}</p>
 			<p><b>Pays : </b>{{this.paynom}}</p>
 		</div>
-		<p align="justify">{{this.cirtext}}</p>
+		
 	{{/each}}
 </div>
+<p class="text">{{detailCircuit.0.cirtext}}</p>
+<br class="myboth">
