--- a/user/views/detaillerEcurie.handlebars
+++ b/user/views/detaillerEcurie.handlebars
@@ -1,19 +1,24 @@
-	<div class="vuePatielleDetailEcurie">
+	<div class="contenu">
+		
 			{{> listerEcurieVuePartielle}}
+			
 	</div>
+	
 	<div class="informationsComplestDetailEcurie">
+		
 		{{#each detailEcurie}}
-			<div class="infosEcurie">
-				<img class="imagesDetailEcurie"src="/image/ecurie/{{this.ecuadresseimage}}" alt="image de l'ecurie" />
-			</div>
+			<img class="imagesDetailEcurie"src="/image/ecurie/{{this.ecuadresseimage}}" alt="image de l'ecurie" />
 			<div class="infosEcurie">
 				<p><b>Nom :</b> {{this.ecunom}}</p>
 				<p><b>Directeur :</b> {{this.ecunomdir}} m</p>
 				<p><b>Adresse :</b> {{this.ecuadrsiege}}</p>
 				<p><b>Pays : </b>{{this.paynom}}</p>
 			</div>
+	</div>
 		{{/each}}
+	
 		{{#if detailEcuriePilote}}
+		<div class="piloteInfoBulle">
 			<p><b>Pilotes :</b></p>
 
 
@@ -32,17 +37,21 @@
 						</a>
 				 	{{/each}}
 
+				</div>
+		
 
 			<br>
-			{{#each detailEcurieVoiture}}
+			
+
+		{{else}}
+			<p class="text">Cette écurie ne participe pas au championnat cette année</p>
+		{{/if}}
+		{{#each detailEcurieVoiture}}
 				<div class="displayVoitureEcurie">
 					<img class="sizeImageVoitureEcurie"src="/image/ecurie/voiture/{{this.voiadresseimage}}" alt="image des voitures" />
 					<p>{{this.voinom}}</p>
 					<p>{{this.typelibelle}}</p>
 				</div>
 			{{/each}}
-
-		{{else}}
-			<p>Cette écurie ne participe pas au championnat cette année</p>
-		{{/if}}
-	</div>
+			<br class="myboth">
+	
