--- a/admin/views/gestionCircuits.handlebars
+++ b/admin/views/gestionCircuits.handlebars
@@ -1,9 +1,12 @@
-<img src="/image/cat_circuit.png" alt="">
-<h1>Gestion des Circuits</h1>
-<a href="/ajoutCircuit">
-    <img src="image/act_add.png" alt="">
-    Ajouter un circuit</a>
-<table>
+<div class="center">
+    <img src="/image/cat_circuit.png" alt="">
+    <h1>Gestion des Circuits</h1>
+    <a href="/ajoutCircuit">
+        <img src="image/act_add.png" alt="">
+        Ajouter un circuit
+    </a>
+</div><br />
+<table class="table">
     <tr>
         <th>Nom</th>
         <th>Longueur</th>
