--- a/admin/views/gestionPilotes.handlebars
+++ b/admin/views/gestionPilotes.handlebars
@@ -1,9 +1,12 @@
-<img src="/image/cat_pilote.png" alt="">
-<h1>Gestion des Pilotes</h1>
-<a href="/ajout">
-    <img src="image/act_add.png" alt="">
-    Ajouter un pilote</a>
-<table>
+<div class="center">
+    <img src="/image/cat_pilote.png" alt="">
+    <h1>Gestion des Pilotes</h1>
+    <a href="/ajout">
+        <img src="image/act_add.png" alt="">
+        Ajouter un pilote
+    </a>
+</div><br />
+<table class="table">
     <tr>      
         <th>Nom</th>
         <th>Prénom</th>
