--- a/admin/views/gestionSponsors.handlebars
+++ b/admin/views/gestionSponsors.handlebars
@@ -1,9 +1,13 @@
-<img src="/image/cat_sponsor.png" alt="">
-<h1>Gestion des Sponsors</h1>
-<a href="/ajoutSponsor">
-    <img src="image/act_add.png" alt="">
-    Ajouter un sponsor</a>
-<table>
+<div class="center">
+    <img src="/image/cat_sponsor.png" alt="">
+    <h1>Gestion des Sponsors</h1>
+    <a href="/ajoutSponsor">
+        <img src="image/act_add.png" alt="">
+        Ajouter un sponsor
+    </a>
+</div><br />
+
+<table class="table">
     <tr>
         <th>Nom</th>
         <th>Activite</th>
