--- a/admin/views/layouts/main.handlebars
+++ b/admin/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
 	</div>
 	<div id="menu">
 		<a href="/pilotes">PILOTES</a> |
-		<a href="/circuits">LES CIRCUITS</a> |
+		<a href="/circuits">CIRCUITS</a> |
 		<a href="/ecuries">ECURIES</a> |
 		<a href="/resultats">RESULTATS</a> |
 		<a href="/sponsor">SPONSORS</a> |
