--- a/admin/public/css/structure.css
+++ b/admin/public/css/structure.css
@@ -90,3 +90,86 @@
   position: absolute;
   z-index: 3000;
 }
+
+/* H O M E */
+
+.admin{
+	display: flex;
+	justify-content: center;
+	padding-bottom: 100px;
+	background-color: black;
+	color:white;
+}
+
+.center{
+	text-align: center;
+}
+
+form{
+	text-align: left;
+}
+
+form label{
+	display: block;
+	width: 150px;
+	float: left;
+}
+
+form .lab{
+	display: block;
+	width: 160px;
+	float: left;
+}
+
+input[type="reset"]{
+	margin-right: 20px;
+}
+
+/**Tableau**/
+.table td, .table th {
+	border : 1px;
+	border-style:solid;
+	border-color:black;
+	height: 30px;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.table{
+	border-collapse: collapse;
+	margin: auto;
+  	margin-bottom: 20px;
+}
+
+h1 {
+	margin-top:0;
+	margin-bottom:30px;
+}
+
+.contains{
+	display: flex;
+	justify-content: center;
+}
+
+/** B O U T O N **/
+
+input[type="submit"], input[type="reset"] {
+	box-shadow:inset 0px 34px 0px -15px #b54b3a;
+	background-color:#a73f2d;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:9px 23px;
+	text-decoration:none;
+	text-shadow:0px -1px 0px #7a2a1d;
+}
+input[type="submit"]:hover, input[type="submit"]:hover {
+	background-color:#b34332;
+}
+input[type="submit"]:active, input[type="submit"]:active {
+	position:relative;
+	top:1px;
+}
