--- a/admin/views/ajoutEcurie.handlebars
+++ b/admin/views/ajoutEcurie.handlebars
@@ -1,16 +1,16 @@
-<h1>Ajouter une Ecurie</h1>
+<h1 class="center">Ajouter une écurie</h1>
 
 <form action="/ecurieAjoute" method="post">
-  <label>Nom</label><input type="text" name="ecunom"><br />
-  <label>Direcreur</label><input type="text" name="ecunomdir"><br />
-  <label>Adresse du siege</label><input type="text" name="ecuadrsiege"><br />
-  <label>Points</label><input type="text" name="ecupoints"><br />
+  <label>Nom</label><input type="text" name="ecunom"><br /><br />
+  <label>Directeur</label><input type="text" name="ecunomdir"><br /><br />
+  <label>Adresse du siege</label><textarea name="ecuadrsiege" rows="3" cols="50"></textarea><br /><br />
+  <label>Points</label><input type="text" size="10" name="ecupoints"> pts<br /><br />
   <label>Pays</label>
   <select name="paynum">
       {{#each listePays}}
       <option value="{{this.paynum}}">{{this.paynom}}</option>
       {{/each}}
-  </select><br />
-  <label>Image</label><input type="file" name="ecuadresseimage" multiple><br />
-  <input type="submit" value="ajouter">
+  </select><br /><br />
+  <label>Image</label><input type="file" name="ecuadresseimage" multiple><br /><br />
+  <div class="center"><input type="submit" value="Ajouter"></div>
 </form>
