--- a/admin/views/ajoutPilote.handlebars
+++ b/admin/views/ajoutPilote.handlebars
@@ -1,24 +1,24 @@
-<h1>Ajouter un pilote</h1>
+<h1 class="center">Ajouter un pilote</h1>
 
 <form action="/piloteAjoute" method="post">
-  <label>Prénom</label><input type="text" name="pilprenom"><br />
-  <label>Nom</label><input type="text" name="pilnom"><br />
-  <label>Date de naissance</label><input type="date" name="pildatenais"><br />
+  <label>Prénom</label><input type="text" name="pilprenom"><br /><br />
+  <label>Nom</label><input type="text" name="pilnom"><br /><br />
+  <label>Date de naissance</label><input type="date" name="pildatenais"><br /><br />
   <label>Nationalité</label>
     <select name="paynum">
       {{#each listeNationalite}}
       <option value="{{this.paynum}}">{{this.paynom}}</option>
       {{/each}}
-  </select><br />
+  </select><br /><br />
   <label>Ecurie</label>
     <select name="ecunum">
       {{#each listeEcurie}}
       <option value="{{this.ecunum}}">{{this.ecunom}}</option>
       {{/each}}
-  </select><br />
-  <label>Points</label><input type="text" name="pilpoints"> pts<br />
-  <label>Poids</label><input type="text" name="pilpoids"> kg<br />
-  <label>Taille</label><input type="text" name="piltaille"> cm<br />
-  <label>Description</label><textarea  name="piltexte"  rows="10" cols="120"></textarea><br />
-  <input type="submit" value="ajouter">
+  </select><br /><br />
+  <label>Points</label><input type="text" size="10" name="pilpoints"> pts<br /><br />
+  <label>Poids</label><input type="text" size="5" name="pilpoids"> kg<br /><br />
+  <label>Taille</label><input type="text" size="5" name="piltaille"> cm<br /><br />
+  <label>Description</label><textarea  name="piltexte"  rows="10" cols="120"></textarea><br /><br />
+  <div class="center"><input type="submit" value="Ajouter"></div>
 </form>
