--- a/admin/views/gestionEcuries.handlebars
+++ b/admin/views/gestionEcuries.handlebars
@@ -1,12 +1,16 @@
-<img src="/image/cat_ecurie.png" alt="">
-<h1>Gestion des Ecuries</h1>
-<a href="/ajoutEcurie">
-    <img src="image/act_add.png" alt="">
-    Ajouter une ecurie</a>
-<table>
+<div class="center">
+    <img src="/image/cat_ecurie.png" alt="">
+    <h1>Gestion des Ecuries</h1>
+    <a href="/ajoutEcurie">
+        <img src="image/act_add.png" alt="">
+        Ajouter une ecurie
+    </a>
+</div><br />
+
+<table class="table">
     <tr>
         <th>Nom</th>
-        <th>Direcreur</th>
+        <th>Directeur</th>
         <th>Points</th>
         <th>Actions</th>
     </tr>
