--- a/admin/views/modifSponsor.handlebars
+++ b/admin/views/modifSponsor.handlebars
@@ -1,9 +1,9 @@
-<h1>Modifier un Sponsor</h1>
+<h1 class="center">Modifier un sponsor</h1>
 {{#each listeInfoSponsorSelect}}
   <form action="/sponsorModifie/{{this.sponum}}/{{this.ecunum}}" method="post">
 
-      <label>Nom</label><input type="text" name="sponom" value="{{this.sponom}}"><br />
-      <label>Secteur d'activite</label><input type="text" name="sposectactivite" value="{{this.sposectactivite}}"><br />
+      <label>Nom</label><input type="text" name="sponom" value="{{this.sponom}}"><br /><br />
+      <label>Secteur d'activite</label><input type="text" name="sposectactivite" value="{{this.sposectactivite}}"><br /><br />
       <label>Ecurie sponsoriee</label>
 
       <select name="ecunum">
@@ -15,7 +15,7 @@
     <option value="{{this.ecunum}}">{{this.ecunom}}</option>
   {{/if}}
 {{/each}}
-      </select><br />
-    <input type="submit" value="modifier">
+      </select><br /><br />
+    <div class="center"><input type="submit" value="Modifier"></div>
   </form>
 {{/each}}
