--- a/admin/views/modifierPilote.handlebars
+++ b/admin/views/modifierPilote.handlebars
@@ -7,16 +7,24 @@
       <label>Date de naissance</label><input type="date" name="pildatenais" value="{{formatDate listeInfoModif.0.pildatenais 'YYYY-MM-DD'}}"><br /><br />
       <label>Nationalité</label>
       <select name="paynum">
-        {{#each listeNationalite}}
-          <option value="{{this.paynum}}">{{this.paynom}}</option>
-        {{/each}}
-      </select><br /><br />
+            {{#each listeNationalitePreSelect}}
+                {{#if this.estmeme}}
+                    <option value="{{this.paynum}}" selected>{{this.paynom}}</option>
+                {{else}}
+                    <option value="{{this.paynum}}">{{this.paynom}}</option>
+                {{/if}}
+             {{/each}}
+      </select><br />
       <label>Ecurie</label>
       <select name="ecunum">
-        {{#each listeEcurie}}
-        <option value="{{this.ecunum}}">{{this.ecunom}}</option>
-        {{/each}}
-      </select><br /><br />
+            {{#each listeEcuriePreSelect}}
+                {{#if this.estmeme}}
+                    <option value="{{this.ecunum}}" selected>{{this.ecunom}}</option>
+                {{else}}
+                    <option value="{{this.ecunum}}">{{this.ecunom}}</option>
+                {{/if}}
+            {{/each}}
+      </select><br />
       <label>Points</label>
         {{#if listeInfoModif.0.pilpoints}}
           <input type="text" name="pilpoints" size="10" value="{{listeInfoModif.0.pilpoints}}"> pts<br /><br />
@@ -28,4 +36,3 @@
       <label>Description</label><textarea  name="piltexte"  rows="10" cols="120">{{listeInfoModif.0.piltexte}}</textarea><br /><br />
       <div class="center"><input type="submit" value="Modifier"></div>
     </form>
-  
