css correction + req resultat

--- a/user/views/layouts/main.handlebars
+++ b/user/views/layouts/main.handlebars
@@ -37,7 +37,7 @@
 					<br />
 					<br />
 
-                Appllication réalisée par Anne-Sophie Laville & Joffrey Annan
+                Application réalisée par Anne-Sophie Laville & Joffrey Annan
                 <br />
 					<img src="/image/nodejs.png" id= "LogoNode" alt="Logo NodeJs" title="Logo Node.JS" />
 			</div>
