--- a/admin/public/css/structure.css
+++ b/admin/public/css/structure.css
@@ -111,14 +111,19 @@ form{
 
 form label{
 	display: block;
-	width: 150px;
+	width: 170px;
 	float: left;
 }
 
 form .lab{
 	display: block;
-	width: 160px;
+	width: 180px;
 	float: left;
+}
+
+input[type="text"], textarea, input[type="date"], input[type="time"], input[type="password"]{
+	border-radius: 10px;
+	padding: 3px;
 }
 
 input[type="reset"]{
