Ajout upload image pilote + redirections de pages

--- a/admin/views/ajoutPilote.handlebars
+++ b/admin/views/ajoutPilote.handlebars
@@ -1,6 +1,6 @@
 <h1 class="center">Ajouter un pilote</h1>
 
-<form action="/piloteAjoute" method="post">
+<form action="/piloteAjoute" enctype="multipart/form-data" method="post">
   <label>Prénom</label><input type="text" name="pilprenom"><br /><br />
   <label>Nom</label><input type="text" name="pilnom"><br /><br />
   <label>Date de naissance</label><input type="date" name="pildatenais"><br /><br />
@@ -20,6 +20,7 @@
   <label>Points</label><input type="text" size="10" name="pilpoints"> pts<br /><br />
   <label>Poids</label><input type="text" size="5" name="pilpoids"> kg<br /><br />
   <label>Taille</label><input type="text" size="5" name="piltaille"> cm<br /><br />
+  <label>Image</label><input type="file" name="phoadresse"><br /><br />
   <label>Description</label><textarea  name="piltexte"  rows="10" cols="100"></textarea><br /><br />
   <div class="center"><input type="submit" value="Ajouter"></div>
 
