--- a/admin/views/suppResultat.handlebars
+++ b/admin/views/suppResultat.handlebars
@@ -1,2 +1,2 @@
-
-<p>Le résultat du pilote a été supprimé</p>
+<meta http-equiv="Refresh" content="2; url=/resultats" />
+<p>Le résultat du pilote a été supprimé ! patientez(2s)...</p>
