--- a/admin/views/gestionCircuits.handlebars
+++ b/admin/views/gestionCircuits.handlebars
@@ -10,7 +10,7 @@
     <tr>
         <th>Nom</th>
         <th>Longueur</th>
-        <th>Nombre de spéctateurs</th>
+        <th>Nombre de spectateurs</th>
         <th>Actions</th>
     </tr>
 
