--- a/admin/views/gestionPilotes.handlebars
+++ b/admin/views/gestionPilotes.handlebars
@@ -13,7 +13,7 @@
         <th>Nom</th>
         <th>Prénom</th>
         <th>Date de naissance</th>
-        <th>Action</th>
+        <th>Actions</th>
     </tr>
 
     {{#each listePilotes}}
