--- a/user/public/css/structure.css
+++ b/user/public/css/structure.css
@@ -103,8 +103,10 @@ height: 100px;
 width: 100px;
 margin:10px;
 }
-.displayPilote{
-display: inline-block;
+
+.wrap {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .contenuPilote {
