--- a/user/views/detaillerEcurie.handlebars
+++ b/user/views/detaillerEcurie.handlebars
@@ -3,14 +3,14 @@
 			{{> listerEcurieVuePartielle}}
 			
 	</div>
-	
+
 	<div class="informationsComplestDetailEcurie">
 		
 		{{#each detailEcurie}}
 			<img class="imagesDetailEcurie"src="/image/ecurie/{{this.ecuadresseimage}}" alt="image de l'ecurie" />
 			<div class="infosEcurie">
 				<p><b>Nom :</b> {{this.ecunom}}</p>
-				<p><b>Directeur :</b> {{this.ecunomdir}} m</p>
+				<p><b>Directeur :</b> {{this.ecunomdir}}</p>
 				<p><b>Adresse :</b> {{this.ecuadrsiege}}</p>
 				<p><b>Pays : </b>{{this.paynom}}</p>
 			</div>
