--- a/admin/views/modifEcurie.handlebars
+++ b/admin/views/modifEcurie.handlebars
@@ -1,10 +1,10 @@
 <h1 class="center">Modifier une écurie</h1>
 {{#each listeInfoEcurieSelect}}
   <form action="/ecurieModifie/{{this.ecunum}}" method="post">
-      <label>Nom</label><input type="text" name="ecunom" value="{{this.ecunom}}"><br /><br />
-      <label>Direcreur</label><input type="text" name="ecunomdir" value="{{this.ecunomdir}}"><br /><br />
-      <label>Adresse du siege</label><textarea name="ecuadrsiege" rows="3" cols="50">{{this.ecuadrsiege}}</textarea><br /><br />
-      <label>Points</label><input type="text" size="10" name="ecupoints" value="{{this.ecupoints}}"> pts<br /><br />
+      <label>Nom</label><input type="text" name="ecunom" value="{{this.ecunom}}" required><br /><br />
+      <label>Direcreur</label><input type="text" name="ecunomdir" value="{{this.ecunomdir}}" required><br /><br />
+      <label>Adresse du siege</label><textarea name="ecuadrsiege" rows="3" cols="50" required>{{this.ecuadrsiege}}</textarea><br /><br />
+      <label>Points</label><input type="text" size="10" name="ecupoints" value="{{this.ecupoints}}" required> pts<br /><br />
       <label>Pays</label>
       <select name="paynum">
 {{#each ../listePaysMemeQueEcurieSelect}}
