--- a/admin/views/ajoutCircuit.handlebars
+++ b/admin/views/ajoutCircuit.handlebars
@@ -1,16 +1,16 @@
 <h1 class="center">Ajouter un circuit</h1>
 
 <form action="/circuitAjoute" enctype="multipart/form-data" method="post">
-  <label>Nom</label><input type="text" name="cirnom"><br /><br />
-  <label>Longueur</label><input type="text" size="5" name="cirlongueur"> m<br /><br />
+  <label>Nom</label><input type="text" name="cirnom" required><br /><br />
+  <label>Longueur</label><input type="text" size="5" name="cirlongueur" required> m<br /><br />
   <label>Pays</label>
   <select name="paynum">
       {{#each listePays}}
       <option value="{{this.paynum}}">{{this.paynom}}</option>
       {{/each}}
   </select><br /><br />
-  <label>Image</label><input type="file" name="ciradresseimage"><br /><br />
-  <label>Nombre de spectateurs</label><input type="text" size="10" name="cirnbspectateurs" multiple> personnes<br /><br />
-  <label>Description</label><textarea name="cirtext" rows="10" cols="100"></textarea><br /><br />
+  <label>Image</label><input type="file" name="ciradresseimage" required><br /><br />
+  <label>Nombre de spectateurs</label><input type="text" size="10" name="cirnbspectateurs" required> personnes<br /><br />
+  <label>Description</label><textarea name="cirtext" rows="10" cols="100" required></textarea><br /><br />
   <div class="center"><input type="submit" value="Ajouter"></div>
 </form>
