--- a/admin/views/ajoutSponsor.handlebars
+++ b/admin/views/ajoutSponsor.handlebars
@@ -1,8 +1,8 @@
 <h1 class="center">Ajouter un sponsor</h1>
 
 <form action="/sponsorAjoute" method="post">
-  <label>Nom</label><input type="text" name="sponom"><br /><br />
-  <label>Secteur d'activité</label><input type="text" name="sposectactivite"><br /><br />
+  <label>Nom</label><input type="text" name="sponom" required><br /><br />
+  <label>Secteur d'activité</label><input type="text" name="sposectactivite" required><br /><br />
   <label>Ecurie sponsorisée</label>
   <select name="ecunum">
       <option value="NULL">Aucune</option>
