--- a/admin/views/modifCircuit.handlebars
+++ b/admin/views/modifCircuit.handlebars
@@ -2,8 +2,8 @@
 {{#each listeInfoCircuitSelect}}
   <form action="/circuitModifie/{{this.cirnum}}" method="post">
 
-      <label>Nom</label><input type="text" name="cirnom" value="{{this.cirnom}}"><br /><br />
-      <label>Longueur</label><input type="text" name="cirlongueur" size="5" value="{{this.cirlongueur}}"> m<br /><br />
+      <label>Nom</label><input type="text" name="cirnom" value="{{this.cirnom}}" required><br /><br />
+      <label>Longueur</label><input type="text" name="cirlongueur" size="5" value="{{this.cirlongueur}}" required> m<br /><br />
       <label>Pays</label>
 
       <select name="paynum">
@@ -15,9 +15,8 @@
   {{/if}}
 {{/each}}
       </select><br /><br />
-      <input type="hidden" name="ciradresseimageDefault" value="{{this.ciradresseimage}}">
-      <label>Nombre de spectateurs</label><input type="text" name="cirnbspectateurs" size="10" value="{{this.cirnbspectateurs}}"> personnes<br /><br />
-      <label>Description</label><textarea name="cirtext" rows="10" cols="100">{{this.cirtext}}</textarea><br /><br />
+      <label>Nombre de spectateurs</label><input type="text" name="cirnbspectateurs" size="10" value="{{this.cirnbspectateurs}}" required> personnes<br /><br />
+      <label>Description</label><textarea name="cirtext" rows="10" cols="100" required>{{this.cirtext}}</textarea><br /><br />
 
     <div class="center"><input type="submit" value="Modifier"></div>
   </form>
