--- a/admin/views/modifierPilote.handlebars
+++ b/admin/views/modifierPilote.handlebars
@@ -2,9 +2,9 @@
     <h1 class="center">Modifier un pilote</h1>
 
     <form action="/piloteModifie/{{this.listeInfoModif.0.pilnum}}" method="post">
-      <label>Prénom</label><input type="text" name="pilprenom" value="{{listeInfoModif.0.pilprenom}}"><br /><br />
-      <label>Nom</label><input type="text" name="pilnom" value="{{listeInfoModif.0.pilnom}}"><br /><br />
-      <label>Date de naissance</label><input type="date" name="pildatenais" value="{{formatDate listeInfoModif.0.pildatenais 'YYYY-MM-DD'}}"><br /><br />
+      <label>Prénom</label><input type="text" name="pilprenom" value="{{listeInfoModif.0.pilprenom}}" required><br /><br />
+      <label>Nom</label><input type="text" name="pilnom" value="{{listeInfoModif.0.pilnom}}" required><br /><br />
+      <label>Date de naissance</label><input type="date" name="pildatenais" value="{{formatDate listeInfoModif.0.pildatenais 'YYYY-MM-DD'}}" required><br /><br />
       <label>Nationalité</label>
       <select name="paynum">
             {{#each listeNationalitePreSelect}}
@@ -27,13 +27,12 @@
       </select><br /><br />
       <label>Points</label>
         {{#if listeInfoModif.0.pilpoints}}
-          <input type="text" name="pilpoints" size="10" value="{{listeInfoModif.0.pilpoints}}"> pts<br /><br />
+          <input type="text" name="pilpoints" size="10" value="{{listeInfoModif.0.pilpoints}}" required> pts<br /><br />
         {{else}}
-          <input type="text" name="pilpoints" size="10" value="0"> pts<br /><br />
+          <input type="text" name="pilpoints" size="10" value="0" required> pts<br /><br />
         {{/if}}
-      <label>Poids</label><input type="text" size="5" name="pilpoids" value="{{listeInfoModif.0.pilpoids}}"> kg<br /><br />
-      <label>Taille</label><input type="text" size="5" name="piltaille" value="{{listeInfoModif.0.piltaille}}"> cm<br /><br />
-      <label>Description</label><textarea  name="piltexte"  rows="10" cols="100">{{listeInfoModif.0.piltexte}}</textarea><br /><br />
+      <label>Poids</label><input type="text" size="5" name="pilpoids" value="{{listeInfoModif.0.pilpoids}}" required> kg<br /><br />
+      <label>Taille</label><input type="text" size="5" name="piltaille" value="{{listeInfoModif.0.piltaille}}" required> cm<br /><br />
+      <label>Description</label><textarea  name="piltexte"  rows="10" cols="100" required>{{listeInfoModif.0.piltexte}}</textarea><br /><br />
       <div class="center"><input type="submit" value="Modifier"></div>
     </form>
-
